update to _config file.

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "William Aldrich"
 title_separator          : "-"
 name                     : "Software Developer"
-description              : "This is a website to showcase some projects."
+description              : "This is a website to showcase some projects. Languages used include and are not limited to: Java, C++, C#, SQL, Python and Javascript."
 url                      : https://w-aldrich.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
